--- a/App.css
+++ b/App.css
@@ -1,85 +1,37 @@
-:root{
-  --imgPxSize:  40px;
-}
 
-#bodyEncap{
-  display: grid;
-  grid-template-columns: 5% auto;
-}
 
-#buttonBarsCont{
-  position: fixed;
-  bottom: 2%;
-  right: 3%;
-  z-index: 1000;
-}
-#buttonBarsCont3{
-  position: fixed;
-  bottom: 7%;
-  right: 3%;
-  z-index: 1000;
-}
-#buttonBars2{
-  position: fixed;
-  bottom: 5%;
-  right: 4%;
-  z-index: 1000;
-}
-#mapEncap{
-  height: 100vh;
-}
-
-canvas{
-  height: 100vh;
-}
-
-/*side bar*/
-#sideBarEncap{
-  height: 100vh;
-  background-color: aqua;
+.App {
   text-align: center;
-  padding: 0px 3px;
-  display: grid;
-}
-#user_profile_pic{
-  width:var(--imgPxSize);
-  height:var(--imgPxSize);
-  object-fit:cover;
-  border-radius: 50%;
-}
-#sideBarBot{
-  display: flex;
-  flex-direction: column;
-
-  justify-content: flex-end;
-  padding-bottom: 50%;
-}
-.img_icon{
-  width: var(--imgPxSize);
-  height: var(--imgPxSize);
-  padding: 3px 4px;
-  margin: 10px 0px;
-  border-radius: 3px;
-}
-.img_icon:hover{
-  background-color: #0000003d;
-}
-.horizontalSideReturn{
-
+  height: 100%;
+  width: 100%;
 }
 
-@media only screen and (max-width: 600px) {
-  /*
-  #bodyEncap{
-    grid-template-columns: auto;
-  }
-  #sideBarEncap{
-    height: 10vh;
-  }
-  canvas{
-    height: 90vh;
-    width: auto;
-  }
-  */
+.app-label{
+  width: 50%;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  background: white;
+  pointer-events: none;
 }
 
+.map-container{
+  height: 100vh;
+  width: 100%;
+}
+
+.clicked-coord-label{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: white;
+  border-radius: 5px;
+}
+
+.clicked-coord-label p {
+  margin: 10px;
+}
